--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
                             Video 6: Learn more about marketing
                         </h1>
                         <p class="inner-desc">
-                            Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a pellentesque
+                            Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a
+                            pellentesque
                             nec, egestas non nisi.
                         </p>
                         <div class="inner-link">
@@ -185,7 +186,8 @@
                             Video 5: How to present yourself in social media
                         </h1>
                         <p class="inner-desc">
-                            Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a pellentesque
+                            Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a
+                            pellentesque
                             nec, egestas non nisi.
                         </p>
                         <div class="inner-link">
@@ -206,7 +208,8 @@
                             Video 4: How to get from employee to CEO
                         </h1>
                         <p class="inner-desc">
-                            Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a pellentesque
+                            Cras ultricies ligula sed magna dictum porta. Praesent sapien massa, convallis a
+                            pellentesque
                             nec, egestas non nisi.
                         </p>
                         <div class="inner-link">
@@ -221,11 +224,206 @@
             </div>
             <div class="outer-button">
                 <a href="https://www.youtube.com/@vtv24" class="sub-button">Subscribe</a>
-                <a href="https://studio.youtube.com/channel/UCQJEGrmtHFK955_54p9lwlA/videos/upload?d=ud&filter=%5B%5D&sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D" class="video-button">Browse Videos</a>
+                <a href="https://studio.youtube.com/channel/UCQJEGrmtHFK955_54p9lwlA/videos/upload?d=ud&filter=%5B%5D&sort=%7B%22columnType%22%3A%22date%22%2C%22sortOrder%22%3A%22DESCENDING%22%7D"
+                    class="video-button">Browse Videos</a>
             </div>
         </div>
     </div>
     <!-- SECTION-FOUR  -->
+
+    <!-- BEFORE BEFORE FOOTER  -->
+    <div class="bbefore-footer">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="partners">
+                    <h3>Our Partners</h3>
+                </div>
+                <div class="inner-list">
+                    <div class="item">
+                        <img src="assets/images/p1.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="assets/images/p2.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="assets//images/p3.png" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="assets/images/p4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- BEFORE BEFORE FOOTER  -->
+
+    <!-- BEFORE FOOTER  -->
+    <div class="before-footer">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-logo">
+                    <img src="assets/images/logo2-1.png" alt="">
+                    <span>CreatorM5</span>
+                </div>
+                <div class="inner-desc">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim arcu cursus tincidunt et odio
+                        enim aliquam.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- BEFORE FOOTER  -->
+
+    <!-- FOOTER  -->
+    <div class="footer">
+        <div class="container">
+            <hr>
+            <div class="inner-wrap">
+                <div class="inner-list">
+                    <div class="about">
+                        <h1 class="inner-title">
+                            About
+                        </h1>
+                        <div class="two-col">
+                            <ul class="ul1">
+                                <li>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#">About us</a>
+                                </li>
+                                <li>
+                                    <a href="#">Sponsors</a>
+                                </li>
+                                <li>
+                                    <a href="#">Contact</a>
+                                </li>
+                                <li>
+                                    <a href="#">Packages</a>
+                                </li>
+                                <li>
+                                    <a href="#">Single Packages</a>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="#">Episodes</a>
+                                </li>
+                                <li>
+                                    <a href="#">Blog</a>
+                                </li>
+                                <li>
+                                    <a href="#">Blog Posts</a>
+                                </li>
+                                <li>
+                                    <a href="#">Our Mission</a>
+                                </li>
+                                <li>
+                                    <a href="#">Reviews</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="partners">
+                        <h1 class="inner-title">
+                            Partners
+                        </h1>
+                        <ul>
+                            <li>
+                                <a href="#">Guide</a>
+                            </li>
+                            <li>
+                                <a href="#">Our Partners</a>
+                            </li>
+                            <li>
+                                <a href="#">Our Services</a>
+                            </li>
+                            <li>
+                                <a href="#">Business</a>
+                            </li>
+                            <li>
+                                <a href="#">Licenses</a>
+                            </li>
+                            <li>
+                                <a href="#">Changelog</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="services">
+                        <h1 class="inner-title">
+                            Services
+                        </h1>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-youtube"></i>
+                                    YouTube
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-facebook"></i>
+                                    FaceBook
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-twitter"></i>
+                                    Twitter
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-google-plus"></i>
+                                    Google Plus
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-pinterest"></i>
+                                    Pinterest
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-solid fa-envelope"></i>
+                                    Email
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lastest-video">
+                        <h1 class="inner-title">
+                            Latest videos
+                        </h1>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    Video 6: Learn more about marketing and sales
+                                </a>
+                            </li>
+                            <hr>
+                            <li>
+                                <a href="#">
+                                    Video 5: How to present yourself in social media
+                                </a>
+                            </li>
+                            <hr>
+                            <li>
+                                <a href="#">
+                                    Video 4: How to get from employee to CEO in 7 weeks
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+    <!-- FOOTER  -->
 
 </body>
 
