add Tran Thinh's file

--- a/index.html
+++ b/index.html
@@ -231,6 +231,66 @@
     </div>
     <!-- SECTION-FOUR  -->
 
+    <!-- Phần cuối cùng của Trần Thịnh -->
+    <div class="section-seven">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-content">
+                    <h1 class="inner-title">
+                        About the host
+                    </h1>
+                    <p class="inner-desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim arcu cursus tincidunt et odio
+                        enim aliquam. Gravida augue arcu duis turpis nisl. Sed tellus quis nisl, est ridiculus. Gravida
+                        faucibus in ut hendrerit. Eget sed sit.
+                        <br>
+                        <br>
+                        Egestas pretium aenean pharetra magna ac placerat vestibulum. Nulla pharetra diam sit amet nisl
+                        suscipit adipiscing bibendum.
+                    </p>
+                    <div class="inner-button">
+                        <a href="#" class="sub-button">Subscribe</a>
+                        <a href="#" class="about-button">About the host</a>
+                    </div>
+                </div>
+                <div class="inner-profile">
+                    <div class="inner-vatatar">
+                        <img src="assets/images/host.jpg" alt="Avatar">
+                    </div>
+                    <h1 class="inner-name">
+                        Nuhan Lee
+                    </h1>
+                    <p class="inner-position">
+                        Entrepreneur & Creator
+                    </p>
+                    <p class="inner-desc">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dignissim arcu cursus tincidunt et odio
+                        enim aliquam dolor. Gravida augue arcu duis turpis nisl.
+                    </p>
+                    <div class="inner-social">
+                        <a href="#">
+                            <i class="fa-brands fa-youtube"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-pinterest"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Phần cuối cùng của Trần Thịnh -->
+
+    <!-- Phần của Phan Tiến  -->
+
+    <!-- Phần của Phan Tiến  -->
+
     <!-- BEFORE BEFORE FOOTER  -->
     <div class="bbefore-footer">
         <div class="container">
