--- a/index.html
+++ b/index.html
@@ -231,6 +231,109 @@
     </div>
     <!-- SECTION-FOUR  -->
 
+    <!-- SECTION FIVE  -->
+    <div class="section-five">
+        <div class="container">
+            <div class="inner-wrap">
+                <h1 class="inner-title">
+                    New videos in your inbox.
+                </h1>
+                <div class="inner-form">
+                    <input type="email" placeholder="Your Email">
+                    <a href="#" class="inner-button">Subscribe</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- SECTION FIVE  -->
+
+    <!-- SECTION SIX  -->
+    <div class="section-six">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-title">
+                    <h1>What our viewers say</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Dignissim arcu cursus tincidunt et odio enim aliquam.
+                    </p>
+                </div>
+                <div class="inner-list">
+                    <div class="item">
+                        <div class="inner-icon">
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <div class="inner-content">
+                            <div class="inner-image">
+                                <div class="inner-avatar">
+                                    <img src="assets/images/viewer1.png" alt="">
+                                </div>
+                            </div>
+                            <div class="inner-comment">
+                                <p> 
+                                    Dignissim enim sit amet venenatis urna cursus eget. Sed viverra tellus in
+                                    hac habitasse platea dictumst.
+                                </p>
+                                <h3>Sophie Gordon, <br> Designer</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="inner-icon">
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <div class="inner-content">
+                            <div class="inner-image">
+                                <div class="inner-avatar">
+                                    <img src="assets/images/viewer2.png" alt="">
+                                </div>
+                            </div>
+                            <div class="inner-comment">
+                                <p> 
+                                    Dignissim enim sit amet venenatis urna cursus eget. Sed viverra tellus in
+                                    hac habitasse platea dictumst.
+                                </p>
+                                <h3>Richard King, <br> ITer</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="inner-icon">
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <div class="inner-content">
+                            <div class="inner-image">
+                                <div class="inner-avatar">
+                                    <img src="assets/images/viewer3.png" alt="">
+                                </div>
+                            </div>
+                            <div class="inner-comment">
+                                <p> 
+                                    Dignissim enim sit amet venenatis urna cursus eget. Sed viverra tellus in
+                                    hac habitasse platea dictumst.
+                                </p>
+                                <h3>Joy Shelton, <br> entrepreneur</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- SECTION SIX  -->
+
     <!-- Phần cuối cùng của Trần Thịnh -->
     <div class="section-seven">
         <div class="container">
@@ -288,7 +391,45 @@
     <!-- Phần cuối cùng của Trần Thịnh -->
 
     <!-- Phần của Phan Tiến  -->
-
+    <div class="section-eight">
+        <div class="container">
+            <div class="inner-wrap">
+                <h1 class="title">
+                    Articles & News
+                </h1>
+                <div class="inner-list">
+                    <div class="inner-item">
+                        <div class="inner-image">
+                            <img src="assets/images/take1.png" alt="">
+                        </div>
+                        <div class="inner-content">
+                            <h3 class="time">March 26, 2024</h3>
+                            <h1 class="title">Learn more about marketing and sales</h1>
+                            <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa convallis.</p>
+                            <div class="read-more">
+                                <a href="#">Read More</a>
+                                <p class="inner-tag">Productivity</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="inner-item">
+                        <div class="inner-image">
+                            <img src="assets/images/take2.png" alt="">
+                        </div>
+                        <div class="inner-content">
+                            <h3 class="time">April 28, 2021</h3>
+                            <h1 class="title">How to present yourself in social media</h1>
+                            <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa convallis.</p>
+                            <div class="read-more">
+                                <a href="#">Read More</a>
+                                <p class="inner-tag">Business</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Phần của Phan Tiến  -->
 
     <!-- BEFORE BEFORE FOOTER  -->
