--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </ul>
             </div>
             <div class="inner-button">
-                <a href="#" class="button-one">Last Video</a>
-                <a href="#" class="button-two">Subscribe</a>
+                <a href="login.html" class="button-one">Login</a>
+                <a href="#" class="button-two">Sign Up</a>
             </div>
         </div>
     </div>
