add sign up page

--- a/signup.html
+++ b/signup.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/base.css">
-    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/signup.css">
 </head>
 <body>
     <div class="header">
@@ -27,17 +27,18 @@
         </div>
     </div>
 
-    <div class="login">
+    <div class="sign-up">
         <div class="inner-wrap">
-            <h1 class="inner-title">
-                Login
-            </h1>
-            <form action="" class="inner-form">
+            <h1 class="inner-title">Sign Up</h1>
+            <form class="inner-form">
+                <input type="text" class="full-name" placeholder="Full Name">
                 <input type="email" class="email" placeholder="Email">
+                <input type="text" class="user-name" placeholder="User name">
                 <input type="password" class="password" placeholder="Password">
+                <input type="password" class="comfirm-password" placeholder="Confirm password">
             </form>
             <div class="inner-button">
-                <a href="index.html" class="login-button">Login</a>
+                <a href="login.html" class="sign-button">Sign Up</a>
             </div>
             <p class="login-with">
                 Or continue with
@@ -52,7 +53,6 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="fortgot-button">Forgot password</a>
         </div>
     </div>
 </body>
