--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
             <div class="inner-logo">
                 <img src="assets/images/logo2-1.png" alt="Logo">
                 <a href="index.html">
-                    Youtube Video Creator
+                    Channel For Dev
                 </a>
             </div>
             <div class="inner-button">
