--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="inner-button">
                 <a href="login.html" class="button-one">Login</a>
-                <a href="#" class="button-two">Sign Up</a>
+                <a href="signup.html" class="button-two">Sign Up</a>
             </div>
         </div>
     </div>
