--- a/index.html
+++ b/index.html
@@ -399,22 +399,22 @@
                 <div class="inner-list">
                     <div class="inner-item">
                         <div class="inner-image">
-                            <img src="assets/images/article-1.jpg" alt="">
+                            <img src="assets/images/websockets.png" alt="">
                         </div>
                         <div class="inner-content">
                             <h3 class="time">March 26, 2024</h3>
-                            <h1 class="title">AWS Cloud Complete Bootcamp Course</h1>
+                            <h1 class="title">Learn WebSockets with Socket.IO</h1>
                             <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa
                                 convallis.</p>
                             <div class="read-more">
-                                <a href="https://www.youtube.com/watch?v=zA8guDqfv40">Read More</a>
+                                <a href="https://www.freecodecamp.org/news/learn-websockets-socket-io/">Read More</a>
                                 <p class="inner-tag">Productivity</p>
                             </div>
                         </div>
                     </div>
                     <div class="inner-item">
                         <div class="inner-image">
-                            <img src="assets/images/article2.jpg" alt="">
+                            <img src="assets/images/free-code-camp-pic-1.jpeg" alt="">
                         </div>
                         <div class="inner-content">
                             <h3 class="time">April 28, 2021</h3>
