--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                             <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa
                                 convallis.</p>
                             <div class="read-more">
-                                <a href="https://www.youtube.com/watch?v=2ZLl8GAk1X4">Read More</a>
+                                <a href="https://www.freecodecamp.org/news/mastering-rag-from-scratch/">Read More</a>
                                 <p class="inner-tag">DSA</p>
                             </div>
                         </div>
