change title of arcticle

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         </div>
                         <div class="inner-content">
                             <h3 class="time">April 28, 2021</h3>
-                            <h1 class="title">Data Structures and Algorithms with Visualizations Full Course (Java)</h1>
+                            <h1 class="title">Learn RAG from Scratch - Python AI Tutorial from a LangChain Engineer</h1>
                             <p class="inner-desc">Cras ultricies ligula sed magna dictum porta. Praesent sapien massa
                                 convallis.</p>
                             <div class="read-more">
